<resources>
    <string name="app_name">Confroid</string>
    <string name="title_activity_explore">Explore</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="title_dialog_create_value">Add value</string>
    <string name="title_dialog_rename_value">Rename value</string>

    <string name="title_explore">Explore</string>
    <string name="label_delete">Delete</string>
    <string name="label_create">Create</string>
    <string name="label_rename">Rename</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_no_result">No result !</string>
    <string name="label_already_exists">There is already an entry with this name</string>
    <string name="label_pick_contact">Pick contact</string>
    <string name="label_my_location">My Location</string>

    <string name="hint_phone_number">Phone number</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>

    <string name="error_range_validation">Value must be in the range [%s, %s]</string>
    <string name="error_pattern_validation">Value must matches with the pattern “%s”</string>
    <string name="error_class_validation">Value must matches with the validator “%s”</string>
    <string name="error_contact_permission">You must grant the permission to confroid to read your contacts !</string>
    <string name="error_location_permission">You must grant the permission to confroid to read your location !</string>

    <string name="title_rename">Type a new name</string>
    <string name="explore">Explore</string>
    <string name="nothing_to_show">Nothing to show</string>

    <!-- Preference Titles -->
    <string name="root_fragment_title">Settings</string>
    <string name="cloud_service_header">Cloud service</string>
    <string name="general_header">General</string>

    <!-- Cloud service Preferences -->
    <string name="configure_access_title">Configure access</string>
    <string name="configure_access_summary">Manage web address and logins</string>

    <!-- Connexion Preferences -->
    <string name="connexion_title">Connection</string>

    <string name="base_address_empty_error">Base address is empty</string>
    <string name="login_empty_error">Login is empty</string>
    <string name="password_empty_error">Password is empty</string>

    <string name="server_status">Server status</string>
    <string name="server_connected">Connected</string>
    <string name="server_disconnected">Disconnected</string>
    <string name="base_address_title">Base address</string>
    <string name="base_address_summary">The url to web service</string>
    <string name="login_title">Login</string>
    <string name="login_summary">The login information</string>
    <string name="password_title">Password</string>
    <string name="password_summary">The password information</string>
    <string name="test_connexion">Test connexion</string>
    <string name="test_connexion_ok">Successfully connected to the server !</string>
    <string name="test_connexion_ko">Failed to connect to the server</string>

    <string name="data_sync_title">Data synchronization</string>
    <string name="data_sync_summary">Choose when you upload locales configs</string>

    <!-- Data sync Preferences -->
    <string name="enable_data_sync_title">Enable data synchronization</string>
    <string name="enable_data_sync_summary">Regularly upload local configurations to the server when device battery is at an acceptable level</string>

    <string name="time_interval_title">Time interval to the server</string>
    <string name="time_interval_summary">Sets the interval at which the local configurations will be sent to the server</string>

    <string name="allow_cellular_data_title">Allow cellular data</string>
    <string name="allow_cellular_data_summary">Turn off cellular data to limit uploads to Wi-Fi</string>

    <string name="requires_charging_title">Requires charging</string>
    <string name="requires_charging_summary">Sets whether device should be charging for uploads</string>

    <!-- General Preferences -->
    <string name="language_title">Language</string>
    <string name="version_title">Version</string>
    <string name="app_version_value" translatable="false">1.0.0</string>

    <!-- Preferences keywords -->
    <string name="prefs_language" translatable="false">language</string>
    <string name="prefs_base_address" translatable="false">base_address</string>
    <string name="prefs_login" translatable="false">login</string>
    <string name="prefs_password" translatable="false">password</string>
    <string name="prefs_enable_data_sync" translatable="false">enable_data_sync</string>
    <string name="prefs_upload_interval" translatable="false">upload_interval</string>
    <string name="prefs_day" translatable="false">day</string>
    <string name="prefs_week" translatable="false">week</string>
    <string name="prefs_month" translatable="false">month</string>
    <string name="prefs_year" translatable="false">year</string>
    <string name="prefs_allow_cellular_data" translatable="false">allow_cellular_data</string>
    <string name="prefs_requires_charging" translatable="false">requires_charging</string>

    <!-- ConfigBrowser activity -->
    <string name="title_activity_config_browser" translatable="false">ConfigBrowserActivity</string>
    <string name="title_explore_configs">Explore configurations</string>
    <string name="tab_title_local">Local</string>
    <string name="tab_title_cloud">Cloud</string>
    <string name="tab_title_files">Files</string>

    <string name="web_client_not_connected">Web client not connected</string>
    <string name="file_not_imported">File not imported</string>
    <string name="file_read_error">Error while loading the config file</string>
    <string name="file_write_error">Error while saving the config file</string>

    <string name="export_config_title">Export this configuration</string>
    <string name="export_config_cloud">To the cloud</string>
    <string name="export_config_new_file">To a new file</string>
    <string name="export_config_existing_file">To an existing file</string>
    <string name="delete_config">Delete configuration</string>
    <string name="delete_config_success">Configuration successfully deleted</string>
    <string name="delete_config_error">Error while removing configuration</string>
    <string name="add">Add</string>
</resources>