<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/data_sync_title">

        <SwitchPreference
            app:key="@string/prefs_enable_data_sync"
            app:title="@string/enable_data_sync_title"
            app:summary="@string/enable_data_sync_summary"
            app:defaultValue="true" />

        <ListPreference
            app:key="@string/prefs_upload_interval"
            app:dependency="enable_data_sync"
            app:entries="@array/interval_upload_entries"
            app:entryValues="@array/interval_upload_values"
            app:title="@string/time_interval_title"
            app:summary="@string/time_interval_summary"
            app:defaultValue="day" />

        <SwitchPreference
            app:key="@string/prefs_allow_cellular_data"
            app:dependency="enable_data_sync"
            app:title="@string/allow_cellular_data_title"
            app:summary="@string/allow_cellular_data_summary"
            app:defaultValue="false" />

        <SwitchPreference
            app:key="@string/prefs_requires_charging"
            app:dependency="enable_data_sync"
            app:title="@string/requires_charging_title"
            app:summary="@string/requires_charging_summary"
            app:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>