<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/connexion_title">

        <SwitchPreference
            app:key="server_status"
            app:title="@string/server_status"
            app:summary="@string/server_disconnected"
            app:defaultValue="false"
            app:selectable="false" />

        <EditTextPreference
            app:key="base_address"
            app:title="@string/base_address_title"
            app:summary="@string/base_address_summary" />

        <EditTextPreference
            app:key="login"
            app:title="@string/login_title"
            app:summary="@string/login_summary" />

        <EditTextPreference
            app:key="password"
            app:title="@string/password_title"
            app:summary="@string/password_summary" />

        <Preference
            app:key="test_connexion_btn"
            app:title="@string/test_connexion"
            app:widgetLayout="@layout/layout_progressbar"/>

    </PreferenceCategory>

</PreferenceScreen>